Add game state and add resize feature

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,10 +35,16 @@ target_include_directories(engine_core PUBLIC ${CMAKE_SOURCE_DIR})
 target_include_directories(engine_object PUBLIC ${CMAKE_SOURCE_DIR})
 
 # Web Configurations
-if (${PLATFORM} STREQUAL "Web")
-    # Tell Emscripten to build an example.html file.
-    set_target_properties(${PROJECT_NAME} PROPERTIES SUFFIX ".html")
-endif()
+# if (${PLATFORM} STREQUAL "Web")
+#     # Tell Emscripten to build an example.html file.
+#     set_target_properties(${PROJECT_NAME} PROPERTIES SUFFIX ".html")
+# endif()
+
+if (EMSCRIPTEN)
+    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -s USE_GLFW=3 -s ASSERTIONS=1 -s WASM=1 -s ASYNCIFY")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -s USE_GLFW=3 -s ASSERTIONS=1 -s WASM=1 -s ASYNCIFY")
+    set(CMAKE_EXECUTABLE_SUFFIX ".html")
+endif ()
 
 # Checks if OSX and links appropriate frameworks (Only required on MacOS)
 if (APPLE)
