change graphic to graphics folder and shape

--- a/graphics/CMakeLists.txt
+++ b/graphics/CMakeLists.txt
@@ -1,9 +1,11 @@
 set(engine_graphic_public_headers
     text.h
+    shape.h
 )
 
 set(engine_graphic_sources
     text.cpp
+    shape.cpp
 )
 
 add_library(engine_graphic ${engine_graphic_public_headers} ${engine_graphic_sources})
