--- a/shapes/CMakeLists.txt
+++ b/shapes/CMakeLists.txt
@@ -1,9 +1,11 @@
 set(engine_shapes_public_headers
     point.h
+    circle.h
 )
 
 set(engine_shapes_public_sources
     point.cpp
+    circle.cpp
 )
 
 add_library(engine_shape ${engine_shapes_public_headers} ${engine_shapes_public_sources})
