Move engine to src

--- a/src/objects/CMakeLists.txt
+++ b/src/objects/CMakeLists.txt
@@ -14,9 +14,4 @@ set(engine_object_sources
 
 add_library(engine_object STATIC ${engine_object_public_headers} ${engine_object_sources})
 target_link_libraries(engine_object PRIVATE raylib)
-
-# add_library(engine_object_game_object game_object.h game_object.cpp)
-# target_link_libraries(engine_object_game_object PRIVATE raylib)
-
-# add_library(engine_object_scence scence.h scence.cpp)
-# target_link_libraries(engine_object_scence PRIVATE raylib)
+file(COPY ${engine_object_public_headers} DESTINATION "${engine_include_dir}/${PROJECT_NAME}/objects")
