--- a/src/graphics/CMakeLists.txt
+++ b/src/graphics/CMakeLists.txt
@@ -14,3 +14,4 @@ set(engine_graphic_sources
 
 add_library(engine_graphic ${engine_graphic_public_headers} ${engine_graphic_sources})
 target_link_libraries(engine_graphic PRIVATE raylib)
+file(COPY ${engine_graphic_public_headers} DESTINATION "${engine_include_dir}/${PROJECT_NAME}/graphics")
