--- a/src/objects/CMakeLists.txt
+++ b/src/objects/CMakeLists.txt
@@ -12,6 +12,6 @@ set(engine_object_sources
     sprite.cpp
 )
 
-add_library(engine_object STATIC ${engine_object_public_headers} ${engine_object_sources})
+add_library(engine_object OBJECT ${engine_object_public_headers} ${engine_object_sources})
 target_link_libraries(engine_object PRIVATE raylib)
 file(COPY ${engine_object_public_headers} DESTINATION "${engine_include_dir}/${PROJECT_NAME}/objects")
