Add Rectangle and TexuturesManager

--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -2,12 +2,14 @@ set(engine_core_public_headers
     application.h
     scence_manager.h
     game.h
+    asset-manager.h
 )
 
 set(engine_core_sources
     application.cpp
     scence_manager.cpp
     game.cpp
+    asset-manager.cpp
 )
 
 add_library(engine_core OBJECT ${engine_core_public_headers} ${engine_core_sources})
